[gd_scene load_steps=7 format=3 uid="uid://b46qwc5ol2ev5"]

[ext_resource type="Script" path="res://addons/shape_texture_2d/shape_texture_2d.gd" id="1_mdw12"]
[ext_resource type="Script" path="res://scenes/world/world_object.gd" id="1_n1mao"]
[ext_resource type="Script" path="res://addons/shape_texture_2d/drawable_rectangle.gd" id="2_la3oc"]

[sub_resource type="Resource" id="Resource_cgbfu"]
script = ExtResource("2_la3oc")
corner_rounding = 0.0

[sub_resource type="Texture2D" id="Texture2D_5a7ps"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("1_mdw12")
size = Vector2i(56, 56)
shape = SubResource("Resource_cgbfu")
fill_type = 0
fill_color = Color(1, 1, 1, 1)
fill_from = Vector2(0, 0)
fill_to = Vector2(1, 0)
fill_repeat = "pad"
stroke_type = 0
stroke_width = 0.0
stroke_color = Color(0, 0, 0, 1)
stroke_from = Vector2(0, 0)
stroke_to = Vector2(1, 0)
stroke_repeat = "pad"
stroke_joint = "round"
offset = Vector2(0, 0)
rotation = 0.0
scale = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vn0m3"]
size = Vector2(60, 60)

[node name="WorldObject" type="Area2D"]
script = ExtResource("1_n1mao")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("Texture2D_5a7ps")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vn0m3")

[node name="VisibleOnScreenNotifier" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(3, 3)

[connection signal="body_entered" from="." to="." method="_char_entered"]
[connection signal="body_exited" from="." to="." method="_char_exited"]
